// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notation-parser should parse moves between tableau cells 1`] = `
Object {
  "index": 0,
  "notation": "1",
  "type": "tableau",
  "value": Array [
    Object {
      "color": "red",
      "id": "AD",
      "rank": "A",
      "suit": "D",
      "value": 1,
    },
    Object {
      "color": "red",
      "id": "QH",
      "rank": "Q",
      "suit": "H",
      "value": 12,
    },
    Object {
      "color": "black",
      "id": "QS",
      "rank": "Q",
      "suit": "S",
      "value": 12,
    },
    Object {
      "color": "black",
      "id": "6S",
      "rank": "6",
      "suit": "S",
      "value": 6,
    },
    Object {
      "color": "black",
      "id": "3C",
      "rank": "3",
      "suit": "C",
      "value": 3,
    },
    Object {
      "color": "black",
      "id": "2C",
      "rank": "2",
      "suit": "C",
      "value": 2,
    },
    Object {
      "color": "black",
      "id": "8S",
      "rank": "8",
      "suit": "S",
      "value": 8,
    },
  ],
}
`;

exports[`notation-parser should parse moves between tableau cells 2`] = `
Object {
  "index": 7,
  "notation": "8",
  "type": "tableau",
  "value": Array [
    Object {
      "color": "red",
      "id": "TD",
      "rank": "T",
      "suit": "D",
      "value": 10,
    },
    Object {
      "color": "red",
      "id": "AH",
      "rank": "A",
      "suit": "H",
      "value": 1,
    },
    Object {
      "color": "black",
      "id": "AS",
      "rank": "A",
      "suit": "S",
      "value": 1,
    },
    Object {
      "color": "red",
      "id": "7H",
      "rank": "7",
      "suit": "H",
      "value": 7,
    },
    Object {
      "color": "red",
      "id": "3H",
      "rank": "3",
      "suit": "H",
      "value": 3,
    },
    Object {
      "color": "red",
      "id": "2D",
      "rank": "2",
      "suit": "D",
      "value": 2,
    },
  ],
}
`;

exports[`notation-parser should parse moves to home 1`] = `
Object {
  "index": 0,
  "notation": "1",
  "type": "tableau",
  "value": Array [
    Object {
      "color": "red",
      "id": "AD",
      "rank": "A",
      "suit": "D",
      "value": 1,
    },
    Object {
      "color": "red",
      "id": "QH",
      "rank": "Q",
      "suit": "H",
      "value": 12,
    },
    Object {
      "color": "black",
      "id": "QS",
      "rank": "Q",
      "suit": "S",
      "value": 12,
    },
    Object {
      "color": "black",
      "id": "6S",
      "rank": "6",
      "suit": "S",
      "value": 6,
    },
    Object {
      "color": "black",
      "id": "3C",
      "rank": "3",
      "suit": "C",
      "value": 3,
    },
    Object {
      "color": "black",
      "id": "2C",
      "rank": "2",
      "suit": "C",
      "value": 2,
    },
    Object {
      "color": "black",
      "id": "8S",
      "rank": "8",
      "suit": "S",
      "value": 8,
    },
  ],
}
`;

exports[`notation-parser should parse moves to home 2`] = `
Object {
  "index": 0,
  "notation": "h",
  "type": "foundation",
  "value": Array [],
}
`;

exports[`notation-parser should parse moves to open cell 1`] = `
Object {
  "index": 0,
  "notation": "a",
  "type": "cell",
  "value": Array [],
}
`;

exports[`notation-parser should parse moves to open cell 2`] = `
Object {
  "index": 0,
  "notation": "1",
  "type": "tableau",
  "value": Array [
    Object {
      "color": "red",
      "id": "AD",
      "rank": "A",
      "suit": "D",
      "value": 1,
    },
    Object {
      "color": "red",
      "id": "QH",
      "rank": "Q",
      "suit": "H",
      "value": 12,
    },
    Object {
      "color": "black",
      "id": "QS",
      "rank": "Q",
      "suit": "S",
      "value": 12,
    },
    Object {
      "color": "black",
      "id": "6S",
      "rank": "6",
      "suit": "S",
      "value": 6,
    },
    Object {
      "color": "black",
      "id": "3C",
      "rank": "3",
      "suit": "C",
      "value": 3,
    },
    Object {
      "color": "black",
      "id": "2C",
      "rank": "2",
      "suit": "C",
      "value": 2,
    },
    Object {
      "color": "black",
      "id": "8S",
      "rank": "8",
      "suit": "S",
      "value": 8,
    },
  ],
}
`;
